(Scott Phillips)  - Removed 1.4 incompatabilities such as valueOf and autoboxing.
git-svn-id: http://scm.dspace.org/svn/repo/trunk@1527 9c30dcfa-912a-0410-8fc2-9e0234be79fd